unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_Accepted__c.field-meta.xml
<CustomField>
    <fullName>ETT_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted</label>
    <type>Checkbox</type>
</CustomField>