unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_Accepted_By_Receptionist__c.field-meta.xml
<CustomField>
    <fullName>ETT_Accepted_By_Receptionist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted By Receptionist</label>
    <type>Checkbox</type>
</CustomField>