unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_Accepted_Image__c.field-meta.xml
<CustomField>
    <fullName>ETT_Accepted_Image__c</fullName>
    <formula>IF( ETT_Accepted__c ==true, IMAGE(&quot;/resource/Accept&quot;, &quot;Accepted&quot;, 32, 32) , IMAGE(&quot;/resource/NotAccepted&quot;, &quot;NotAccepted&quot;, 32, 32))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accepted Image</label>
    <type>Text</type>
</CustomField>