unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_Accounts__c.field-meta.xml
<CustomField>
    <fullName>ETT_Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>