unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_Brand_NewText__c.field-meta.xml
<CustomField>
    <fullName>ETT_Brand_NewText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Brand NewText</label>
    <length>250</length>
    <type>Text</type>
</CustomField>