unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_Code__c.field-meta.xml
<CustomField>
    <fullName>ETT_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>