unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_Collection_Card__c.field-meta.xml
<CustomField>
    <fullName>ETT_Collection_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Card</label>
    <referenceTo>ETT_Collection_Card__c</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>