unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_Country_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>ETT_Country_of_Origin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country of Origin</label>
    <referenceTo>ETT_Country_Master__c</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>