unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_Country_of_Origin_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Country_of_Origin_Name__c</fullName>
    <formula>ETT_Country_of_Origin__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETT Country of Origin Name</label>
    <type>Text</type>
</CustomField>