unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_Hot_Price__c.field-meta.xml
<CustomField>
    <fullName>ETT_Hot_Price__c</fullName>
    <label>Hot Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>