unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_Is_Pricing_Information_Missing__c.field-meta.xml
<CustomField>
    <fullName>ETT_Is_Pricing_Information_Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pricing Information Missing</label>
    <type>Checkbox</type>
</CustomField>