unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>ETT_Job_Type__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retread</fullName>
                <default>true</default>
                <label>Retread</label>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>