unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_New_Pattern__c.field-meta.xml
<CustomField>
    <fullName>ETT_New_Pattern__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ETT New Pattern</label>
    <length>250</length>
    <type>Text</type>
</CustomField>