unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_New_Tyre_Details_Approved__c.field-meta.xml
<CustomField>
    <fullName>ETT_New_Tyre_Details_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Tyre Details Approved</label>
    <type>Checkbox</type>
</CustomField>