unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_New_Tyre_Size__c.field-meta.xml
<CustomField>
    <fullName>ETT_New_Tyre_Size__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ETT New Tyre Size</label>
    <length>250</length>
    <type>Text</type>
</CustomField>