unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ETT_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>