unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_Pattern__c.field-meta.xml
<CustomField>
    <fullName>ETT_Pattern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pattern</label>
    <referenceTo>ETT_Pattern_Master__c</referenceTo>
    <relationshipLabel>Work Order Line Items (Pattern)</relationshipLabel>
    <relationshipName>Work_Order_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>