unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_Pattern_Master__c.field-meta.xml
<CustomField>
    <fullName>ETT_Pattern_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pattern Master</label>
    <referenceTo>ETT_Pattern_Master__c</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>