unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_Pattern_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Pattern_Name__c</fullName>
    <formula>ETT_Pattern__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pattern Name</label>
    <type>Text</type>
</CustomField>