unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_Pattern_NewText__c.field-meta.xml
<CustomField>
    <fullName>ETT_Pattern_NewText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pattern NewText</label>
    <length>250</length>
    <type>Text</type>
</CustomField>