unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_Ply_Rate__c.field-meta.xml
<CustomField>
    <fullName>ETT_Ply_Rate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ply Rate</label>
    <length>200</length>
    <type>Text</type>
</CustomField>