unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_PR__c.field-meta.xml
<CustomField>
    <fullName>ETT_PR__c</fullName>
    <label>PR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>