unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_Remarks__c.field-meta.xml
<CustomField>
    <fullName>ETT_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>