unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_S_Index__c.field-meta.xml
<CustomField>
    <fullName>ETT_S_Index__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>S Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>