unpackaged/main/default/objects/WorkOrderLineItem/fields/ETT_Tyre_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Serial_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tyre Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>