unpackaged/main/default/objects/WorkOrderLineItem/recordTypes/ETT_Tyre_B2B_Supplier.recordType-meta.xml
<RecordType>
    <fullName>ETT_Tyre_B2B_Supplier</fullName>
    <active>true</active>
    <description>ET Tyre Work Order Line Item for B2B Supplier</description>
    <label>Tyre - B2B Supplier</label>
</RecordType>