unpackaged/main/default/objects/WorkOrderLineItem/recordTypes/ETT_Tyre_Refurbishing_Services.recordType-meta.xml
<RecordType>
    <fullName>ETT_Tyre_Refurbishing_Services</fullName>
    <active>true</active>
    <description>ET Tyre Work Order Line Item for Cash Customer</description>
    <label>Tyre - Refurbishing Services</label>
</RecordType>